--- a/AmbrosiaLib/Ambrosia/AmbrosiaLib.csproj
+++ b/AmbrosiaLib/Ambrosia/AmbrosiaLib.csproj
@@ -8,6 +8,7 @@
     <AssemblyOriginatorKeyFile>../../Ambrosia/Ambrosia.snk</AssemblyOriginatorKeyFile>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>8</LangVersion>
+    <Configurations>Debug;Release;Measure</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch('$(TargetFramework)', '^netstandard\d'))">
