--- a/AzureBlobsLogPicker/AzureBlobsLogPicker.csproj
+++ b/AzureBlobsLogPicker/AzureBlobsLogPicker.csproj
@@ -4,6 +4,8 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>../Ambrosia/Ambrosia.snk</AssemblyOriginatorKeyFile>
+    <Configurations>Debug;Release;Measure</Configurations>
+    <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
