--- a/SharedAmbrosiaTools/SharedAmbrosiaTools.csproj
+++ b/SharedAmbrosiaTools/SharedAmbrosiaTools.csproj
@@ -5,6 +5,7 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>../Ambrosia/Ambrosia.snk</AssemblyOriginatorKeyFile>
     <Platforms>AnyCPU;x64</Platforms>
+    <Configurations>Debug;Release;Measure</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
