--- a/SupportingImmortalCoordinator/SupportingImmortalCoordinator.csproj
+++ b/SupportingImmortalCoordinator/SupportingImmortalCoordinator.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net472</TargetFramework>
+        <Configurations>Debug;Release;Measure</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
