--- a/SupportingImmortalCoordinator/SupportingImmortalCoordinator.csproj
+++ b/SupportingImmortalCoordinator/SupportingImmortalCoordinator.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net472</TargetFramework>
+        <TargetFrameworks>net472;netcoreapp3.1;netcoreapp5.0</TargetFrameworks>
         <Configurations>Debug;Release;Measure</Configurations>
         <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
@@ -14,8 +14,13 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Build" Version="15.3.409" ExcludeAssets="runtime" />
+        <PackageReference Include="Microsoft.Build.Utilities.Core" Version="15.3.409" ExcludeAssets="runtime" />
+        <PackageReference Include="System.Security.Principal" Version="4.3.0" />
+    </ItemGroup>
+    
+    <ItemGroup>
         <PackageReference Include="Microsoft.CRA" Version="2020.9.24.1" />
-        <PackageReference Include="Microsoft.Build.Locator" Version="1.2.2" />
         <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.9.0-2.final" />
         <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0-2.final" />
     </ItemGroup>
